<?xml version="1.0"?>
<package>
  <name>motion_controller</name>
  <version>0.0.3</version>
  <description>A catkin version of driver for dunkermotoren motor</description>

  <maintainer email="Samuel.xu1988@gmail.com">Shengdong Xu</maintainer>
  <author>Shengdong Xu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>roscpp</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>apriltags_ros</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
